proj1/tests/error/defaultargs.py
# Make sure default arguments do not work

def hello(n=0):
    print n
